# chickie-api

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  CLAUDE.md  CLEAN_ARCHITECTURE_GUIDE.md  Cargo.toml  Dockerfile  Dockerfile.scheduler  Dockerfile.worker  ERP_ANALYSIS.md  GEMINI.md  MIGRATION_SURREAL.md  Makefile  QWEN.md  RABBITMQ_SETUP.md  README.md  Roadmap.md  TOGGLE_BLOQUEADO_API.md  changes.md  database.secrets.env  deploy.yaml  docker-compose.prod.yml  docker-compose.yml  infra.secrets.env  integração-whatsapp.md  parsing-error.txt  pedido.json  pendencias.md  scheduler.toml  text.txt
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/api/src/api_handlers/: auth.rs  mod.rs  openapi.rs  state.rs  wipe.rs
crates/api/src/api_handlers/catalogo/: atualizar_adicional.rs  atualizar_categoria.rs  criar_adicional.rs  criar_categoria.rs  deletar_adicional.rs  deletar_categoria.rs  listar_adicionais.rs  listar_adicionais_disponiveis.rs  listar_categorias.rs  marcar_indisponivel.rs
crates/api/src/api_handlers/config_pedido/: buscar.rs  salvar.rs
crates/api/src/api_handlers/cupom/: atualizar.rs  criar_cupom.rs  deletar.rs  listar_cupons.rs  validar_cupom.rs
crates/api/src/api_handlers/dto/: mod.rs
crates/api/src/api_handlers/endereco_entrega/: buscar_por_pedido.rs  criar_para_pedido.rs  listar_por_loja.rs  mod.rs
crates/api/src/api_handlers/endereco_loja/: atualizar.rs  criar.rs  deletar.rs  listar.rs
crates/api/src/api_handlers/endereco_usuario/: atualizar_endereco.rs  buscar_endereco.rs  criar_endereco.rs  deletar_endereco.rs  listar_enderecos.rs
crates/api/src/api_handlers/entregador/: atualizar.rs  atualizar_disponibilidade.rs  listar_entregadores.rs  trocar_email_senha.rs
crates/api/src/api_handlers/funcionario/: atualizar.rs  listar_funcionarios.rs  trocar_email_senha.rs
crates/api/src/api_handlers/horario/: criar_ou_atualizar.rs  definir_ativo.rs  deletar_por_dia.rs  listar.rs
crates/api/src/api_handlers/ingrediente/: atualizar_ingrediente.rs  criar_ingrediente.rs  deletar_ingrediente.rs  listar_ingredientes.rs  mod.rs
crates/api/src/api_handlers/loja/: adicionar_cliente.rs  adicionar_entregador.rs  adicionar_funcionario.rs  buscar_loja.rs  buscar_por_slug.rs  criar_loja.rs  listar_lojas.rs  listar_lojas_admin.rs  listar_minhas_lojas.rs  mod.rs  pesquisar_lojas.rs  verificar_slug_disponivel.rs
crates/api/src/api_handlers/loja_favorita/: adicionar_favorita.rs  listar_minhas_favoritas.rs  remover_favorita.rs  verificar_favorita.rs
crates/api/src/api_handlers/marketing/: atualizar_promocao.rs  avaliar_loja.rs  avaliar_produto.rs  criar_promocao.rs  deletar_promocao.rs  listar_promocoes.rs  mod.rs
crates/api/src/api_handlers/pedido/: atribuir_entregador.rs  atualizar_status.rs  (+8 more)
crates/api/src/handlers/: auth.rs  chat.rs  mod.rs  openapi.rs  protobuf.rs  state.rs  wipe.rs
crates/api/src/infrastructure/: database.rs
crates/cli/: Cargo.toml
crates/cli/src/: app_state.rs  args.rs  database.rs  helpers.rs  main.rs
crates/cli/src/cmds/: auth.rs  catalog.rs  config.rs  db.rs  enderecos.rs  entregadores.rs  favoritos.rs  funcionarios.rs  horarios.rs  ingredientes.rs  lojas.rs  marketing.rs  mod.rs  pedidos.rs  users.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: database.rs  lib.rs
crates/core/src/adapters/: loja_adapter.rs  mod.rs  redis_chat_adapter.rs  redis_whatsapp_adapter.rs  usuario_adapter.rs
crates/core/src/database/: migrations.rs  mod.rs  pool.rs
crates/core/src/domain/: mod.rs
crates/core/src/models/: adicional.rs  avaliacao.rs  categoria.rs  chat.rs  cliente.rs  endereco.rs  entregador.rs  funcionario.rs  horarios_de_funcionamento.rs  ingrediente.rs  loja.rs  loja_favorita.rs  mod.rs  model.rs  parte_de_pedido.rs  pedido.rs  produto.rs  promocoes.rs  usuario.rs  whatsapp_binding.rs
crates/core/src/ports/: adicional_port.rs  avaliacao_loja_port.rs  avaliacao_produto_port.rs  categoria_port.rs  chat_port.rs  email_port.rs  endereco_entrega_port.rs  endereco_usuario_port.rs  horario_port.rs  ingrediente_port.rs  loja_favorita_port.rs  loja_port.rs  mod.rs  ordem_categoria_port.rs  pedido_port.rs  pre_cadastro_port.rs  produto_port.rs  storage.rs  usuario_port.rs  whatsapp_conversation_port.rs  whatsapp_port.rs
crates/core/src/repositories/: adicional_repository.rs  avaliacao_de_loja_repository.rs  avaliacao_de_produto_repository.rs  categoria_ordem_repository.rs  categoria_produtos_repository.rs  chat_repository.rs  cliente_repository.rs  cupom_repository.rs  endereco_entrega_repository.rs  endereco_usuario_repository.rs  entregador_repository.rs  funcionario_repository.rs  horario_funcionamento_repository.rs  ingrediente_repository.rs  loja_favorita_repository.rs  loja_repository.rs  mod.rs  parte_de_item_pedido_repository.rs  pedido_repository.rs  pre_cadastro_repository.rs  produto_repository.rs  promocao_repository.rs  usuario_repository.rs  whatsapp_repository.rs
crates/core/src/services/: asaas_service.rs  catalogo_service.rs  chat_service.rs  configuracao_pedidos_loja_service.rs  email_service.rs  endereco_entrega_service.rs  endereco_usuario_service.rs  entregador_service.rs  funcionario_service.rs  horario_funcionamento_service.rs  loja_favorita_service.rs  loja_service.rs  marketing_service.rs  mod.rs  pedido_service.rs  soft_delete_service.rs  usuario_service.rs  whatsapp_service.rs
crates/core/src/templates/: verificacao_email.html
crates/core/src/usecases/: admin.rs  catalogo.rs  chat.rs  endereco_entrega.rs  loja.rs  loja_favorita.rs  marketing.rs  mod.rs  pagamento.rs  pedido.rs  whatsapp.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: config.rs  log.rs  main.rs  registry.rs  server.rs
crates/scheduler/src/jobs/: cleanup.rs  mod.rs  soft_delete_cleanup.rs
crates/smtp_server/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  main.rs  mod.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
crates/worker/src/handlers/: register.rs
crates/worker/src/worker_handlers/: mod.rs  register.rs
crates/worker/src/worker_lib/: mod.rs
(+674 files in other folders)
