[workspace]
members = [
    "crates/core",
    "crates/api",
    "crates/worker",
    "crates/scheduler",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Antonio"]

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
aws-config = "1.5"
aws-sdk-s3 = "1.40"
bcrypt = "0.18.0"
bytes = "1.10"
chrono = { version = "0.4.43", features = ["serde"] }
rust_decimal = { version = "1.38", features = ["serde"] }
rust_decimal_macros = "1.38"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "uuid", "chrono", "rust_decimal", "postgres"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid", "decimal"] }
futures = "0.3"
axum = { version = "0.8.8", features = ["multipart"] }
tower-http = { version = "0.6.8", features = ["cors"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
lapin = "2"
cron = "0.15"
toml = "0.8"
chickie-core = { path = "crates/core" }
