[workspace]
members = [
    "crates/core",
    "crates/api",
    "crates/worker",
    "crates/scheduler",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Antonio"]

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
argon2 = { version = "0.5", features = ["simple"] }
aws-config = "1.5"
aws-sdk-s3 = "1.40"
bytes = "1.10"
chrono = { version = "0.4.43", features = ["serde"] }
rust_decimal = { version = "1.38", features = ["serde"] }
rust_decimal_macros = "1.38"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "uuid", "chrono", "rust_decimal", "postgres", "json"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid", "decimal"] }
futures = "0.3"
axum = { version = "0.8.8", features = ["multipart", "ws"] }
tower-http = { version = "0.6.8", features = ["cors"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
lapin = "2"
cron = "0.15"
toml = "0.8"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tera = "1"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder"] }
redis = { version = "0.29", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }
chickie-core = { path = "crates/core" }
