[package]
name = "chickie-api"
version.workspace = true
edition.workspace = true

[dependencies]
chickie-core.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
uuid.workspace = true
rust_decimal.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
futures.workspace = true
async-trait.workspace = true
