[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chickie"
path = "src/main.rs"

[dependencies]
chickie_core.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
uuid.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
anyhow.workspace = true
tabled = "0.16"
