[package]
name = "chickie-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
bcrypt.workspace = true
bytes.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
futures.workspace = true
