[package]
name = "chickie-scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
chickie-core.workspace = true
axum.workspace = true
cron.workspace = true
toml.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
async-trait.workspace = true
sqlx.workspace = true
