[package]
name = "smtp-server"
version = "0.1.0"
edition = "2021"
description = "Production SMTP server in Rust"

[[bin]]
name = "smtp-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
regex = "1"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
mail-send = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
dotenvy = "0.15"
