[package]
name = "chickie-worker"
version.workspace = true
edition.workspace = true

[dependencies]
chickie-core.workspace = true
lapin.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
futures.workspace = true
